cartlogic: working for now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "cSpell.words": ["icondiv", "Minecart", "navicons", "noroff", "textbox", "zilla"]
+    "cSpell.words": [
+        "icondiv",
+        "Localstorage",
+        "Minecart",
+        "navicons",
+        "noroff",
+        "textbox",
+        "zilla"
+    ]
 }
